# vortex-msgs

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
.github/workflows/: industrial-ci.yml  source-build.yaml
action/: FilteredLandmarks.action  FilteredPose.action  FindDock.action  GoToWaypoint.action  GripperOpenLoopCommand.action  GripperReferenceFilterWaypoint.action  GuidanceWaypoint.action  HybridpathGuidance.action  LOSGuidance.action  LandmarkConvergence.action  LandmarkPolling.action  LocateDock.action  LosPathFollowing.action  NavigateWaypoints.action  PipelineFollowing.action  ReferenceFilterQuatWaypoint.action  ReferenceFilterWaypoint.action  VtfGuidance.action  WaypointManager.action  dp.action
log/: latest_list
msg/: ActionFilterRequest.msg  BearingMeasurement.msg  BearingMeasurementArray.msg  CentroidArray.msg  Clusters.msg  DVLAltitude.msg  DVLDepth.msg  DetectedObject.msg  DetectedObjectArray.msg  GripperReferenceFilter.msg  GripperState.msg  GripperStateVelocityCommand.msg  GripperStatuses.msg  GripperWaypoint.msg  GuidanceData.msg  HybridpathReference.msg  KMBinary.msg  LOSGuidance.msg  Landmark.msg  LandmarkArray.msg  LandmarkAsv.msg  LandmarkAsvArray.msg  LandmarkSubtype.msg  LandmarkTrack.msg  LandmarkTrackArray.msg  LandmarkType.msg  LandmarkTypeClass.msg  Line2D.msg  Line2DArray.msg  LineSegment2D.msg  LineSegment2DArray.msg  LineSegment3D.msg  LineSegment3DArray.msg  NorbitSonarInfo.msg  ObjectMarkerNavigation.msg  OdometryArray.msg  OperationMode.msg  Parameter.msg  ParameterArray.msg  Point2DArray.msg  (+19 more)
srv/: DesiredHeading.srv  DesiredVelocity.srv  GetOperationMode.srv  MissionParameters.srv  MissionPlanner.srv  OperationModeSRV.srv  RequestOperationMode.srv  SendPose.srv  SendWaypoints.srv  SetKillswitch.srv  SetLosMode.srv  SetOperationMode.srv  ToggleKillswitch.srv  Waypoint.srv  WaypointAddition.srv
