<?xml version="1.0"?>
<package format="3">
  <name>vortex_msgs</name>
  <version>0.0.1</version>
  <description>The vortex_msgs package</description>
  <maintainer email="detoxte@gmail.com">Christopher Strøm</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>
  <depend>nav_msgs</depend>
  
  <export>
    <rosidl_package_selection file="${ament_cmake_export_rosidl_package_selection}" />
  </export>
</package>
