<?xml version="1.0"?>
<package format="3">
  <name>vortex_msgs</name>
  <version>0.0.1</version>
  <description>The vortex_msgs package</description>
  <maintainer email="aleksander.klu@hotmail.com">alekskl01</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>action_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosidl_package_selection file="${ament_cmake_export_rosidl_package_selection}" />
  </export>
</package>
